# pytest-example

./: main.py  pyproject.toml  pytest.ini  test_combined.py  test_custom_marks.py  test_expect_fail.py  test_multiple_combined.py  test_parametrize.py  test_single.py  test_skip.py
