[tool.poetry]
name = "pytest-example"
version = "0.1.0"
description = ""
authors = ["Stephen Weiss <stephen.c.weiss@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
